four-bar-rs/TODO
Upgrade candidate, but still doesn't build:

   Compiling const-str v0.5.7
error[E0080]: evaluation of constant value failed
  --> /scratch/math/four-bar-rs/work/vendor/const-str-0.5.7/src/__ctfe/unwrap.rs:7:21
   |
7  |             None => panic!("called `Option::unwrap()` on a `None` value"),
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'called `Option::unwrap()` on a `None` value', /scratch/math/four-bar-rs/work/vendor/const-str-0.5.7/src/__ctfe/unwrap.rs:7:21
   |
note: inside `Unwrap::<std::option::Option<&str>>::const_eval`
  --> /scratch/math/four-bar-rs/work/vendor/const-str-0.5.7/src/__ctfe/unwrap.rs:7:21
   |
7  |             None => panic!("called `Option::unwrap()` on a `None` value"),
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `HASH`
  --> four-bar-ui/src/app.rs:18:28
   |
18 |         const HASH: &str = const_str::unwrap!(GIT_HASH);
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `const_str::unwrap` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
  --> four-bar-ui/src/app.rs:19:48
   |
19 |         const_str::concat!("v", VERSION, " (", HASH, ")")
   |                                                ^^^^

note: erroneous constant encountered
  --> four-bar-ui/src/app.rs:19:9
   |
19 |         const_str::concat!("v", VERSION, " (", HASH, ")")
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this note originates in the macro `$crate::to_str` which comes from the expansion of the macro `const_str::concat` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0080`.
error: could not compile `four-bar-ui` (bin "four-bar") due to 1 previous error
*** Error code 101
